# mnemolith

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  claude.yml  security-review.yml
docs/: backup-and-restore.md  claude-plugin.md  cli-reference.md  configuration.md  getting-started.md  how-it-works.md  mcp-setup.md  obsidian-setup.md
skills/obsidian-notes/: SKILL.md
src/mnemolith/: backup.py  config.py  embeddings.py  index_state.py  indexer.py  main.py  mcp_server.py  parser.py  pg_store.py  pgvector_store.py  qdrant_store.py  vector_store.py
src/second_brain/: config.py  embeddings.py  indexer.py  main.py  mcp_server.py  parser.py  qdrant_store.py
tests/: conftest.py  test_backup.py  test_backup_integration.py  test_config.py  test_embeddings.py  test_index_state.py  test_indexer.py  test_indexer_incremental.py  test_integration.py  test_main.py  test_mcp_server.py  test_parser.py  test_pg_integration.py  test_pg_store.py  test_pgvector_integration.py  test_pgvector_store.py  test_qdrant_integration.py  test_vector_store.py
tests/fixtures/vault/: french-note.md  headed.md  inline-tags.md  no-frontmatter.md  simple.md  wiki-links.md
tests/fixtures/vault/nested/: deep-note.md
