[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0,<2.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "pyyaml>=6.0",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
second-brain = "second_brain.main:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a running Qdrant instance",
]

[tool.coverage.run]
source = ["second_brain"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]
