[project]
name = "mnemolith"
version = "0.1.0"
description = "Semantic search over an Obsidian vault using RAG, Qdrant, and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0",
    "openai>=1.0,<2.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "pyyaml>=6.0",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mnemolith = "mnemolith.main:main"
mnemolith-mcp = "mnemolith.mcp_server:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a running Qdrant instance",
]

[tool.coverage.run]
source = ["mnemolith"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]
